Quorum3/Library/Tests/Inheritance/Pass/GrandChildWithMultiple.quorum
class GrandChildWithMultiple is ChildInheritingBlueprintAction

    action Test
        output "grandchild"
    end

end