Quorum3/Library/Tests/Inheritance/Fail/WrongBlueprintParent.quorum
class WrongBlueprintParent 
    action Test end
end